[gd_scene load_steps=2 format=3 uid="uid://caidgm4d88qyr"]

[ext_resource type="Script" path="res://scripts/guiscripts/pause_menu.gd" id="1_rxlo3"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_rxlo3")

[node name="PausePanel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonMarginContainer" type="MarginContainer" parent="PausePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ButtonVerticalContainer" type="VBoxContainer" parent="PausePanel/ButtonMarginContainer"]
layout_mode = 2

[node name="PausedLabel" type="Label" parent="PausePanel/ButtonMarginContainer/ButtonVerticalContainer"]
layout_mode = 2
text = "Game Paused"

[node name="ResumeButton" type="Button" parent="PausePanel/ButtonMarginContainer/ButtonVerticalContainer"]
layout_mode = 2
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PausePanel/ButtonMarginContainer/ButtonVerticalContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="PausePanel/ButtonMarginContainer/ButtonVerticalContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PausePanel/ButtonMarginContainer/ButtonVerticalContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
